<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:id="@+id/menu_frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_menu">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/sevenfold_margin"
        android:gravity="center_horizontal"
        >

        <com.facebook.drawee.view.SimpleDraweeView
            android:id="@+id/sdv_pic"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_centerHorizontal="true"
            fresco:actualImageScaleType="focusCrop"
            fresco:fadeDuration="500"
            fresco:failureImage="@mipmap/default_face"
            fresco:failureImageScaleType="centerInside"
            fresco:placeholderImageScaleType="focusCrop"
            fresco:roundAsCircle="true"
            fresco:roundingBorderColor="@color/theme_color"
            fresco:roundingBorderWidth="@dimen/header_border_width" />

        <LinearLayout
            android:id="@+id/ll_login_ok"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sdv_pic"
            android:orientation="vertical"
            android:padding="@dimen/double_margin">

            <TextView
                android:id="@+id/tv_name"
                android:text="15972223043"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/big_text_size" />

            <TextView
                android:id="@+id/tv_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="1"
                android:layout_marginTop="@dimen/halfmargin"
                android:background="@drawable/orange_menu_kuang"
                android:paddingLeft="@dimen/double_margin"
                android:paddingRight="@dimen/double_margin"
                android:textColor="@color/theme_color"
                android:textSize="@dimen/small_text_size" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_no_login"
            android:layout_below="@+id/sdv_pic"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"

            android:visibility="gone"
            android:orientation="horizontal"
            android:padding="@dimen/double_margin">

            <TextView
                android:id="@+id/tv_login"
                style="@style/menu_tv_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@mipmap/login_bt"
                android:gravity="center"
                android:text="@string/login"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_register"
                style="@style/menu_tv_style"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin"
                android:layout_weight="1"
                android:background="@mipmap/regist_bt"
                android:gravity="center"
                android:text="@string/register"
                android:textColor="@color/theme_color" />
        </LinearLayout>

        <RadioGroup
            android:id="@+id/radiogroup"
            android:layout_marginTop="150dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="vertical"
            android:paddingLeft="@dimen/threefold_margin">

            <RadioButton
                android:id="@+id/rb_my_msg"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/mymessge_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/mymessage" />
            <RadioButton
                android:id="@+id/rb_wantdate"
                style="@style/menu_tv_style"
                android:button="@null"
                android:checked="true"
                android:drawableLeft="@drawable/want_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/wantdate" />

            <RadioButton
                android:id="@+id/rb_nearby_people"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/near_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/nearby_people" />

            <RadioButton
                android:id="@+id/rb_attention"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/attention_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/attention" />

            <RadioButton
                android:id="@+id/rb_dynamic"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/dynamic_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/dynamic" />

            <RadioButton
                android:id="@+id/rb_circle"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/circle_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/circle" />

            <RadioButton
                android:id="@+id/rb_spice_store"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/store_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/spice_store" />

            <RadioButton
                android:id="@+id/rb_my"
                style="@style/menu_tv_style"
                android:button="@null"
                android:drawableLeft="@drawable/my_select"
                android:drawablePadding="@dimen/margin"
                android:text="@string/my" />

        </RadioGroup>
        <LinearLayout
            android:layout_marginTop="145dp"
            android:layout_marginLeft="120dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">
            <ImageView
                android:id="@+id/btnFlag"
                android:button="@null"
                android:background="#00000000"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />
        </LinearLayout>
    </RelativeLayout>
</FrameLayout>