<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@mipmap/pop_kuang"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="0dp"
    android:paddingLeft="@dimen/margin"
    android:paddingRight="@dimen/margin"
    android:paddingTop="0dp">

    <TextView
        android:id="@+id/tv_flashback"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:text="@string/flashback"
        android:textColor="@color/gray2"
        android:textSize="@dimen/normal_text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_hotreview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:text="@string/hotreview"
        android:textColor="@color/gray2"
        android:textSize="@dimen/normal_text_size" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/gray" />

    <TextView
        android:id="@+id/tv_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin"
        android:text="@string/report"
        android:textColor="@color/gray2"
        android:textSize="@dimen/normal_text_size" />

</LinearLayout>