<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:background="@drawable/dialog_corner"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_camera"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/camera"
                android:textColor="@color/tv_color_register"
                android:textSize="@dimen/normal_text_size" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/xiantiao2" />

            <TextView
                android:id="@+id/tv_album"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center"
                android:text="@string/album"
                android:textColor="@color/tv_color_register"
                android:textSize="@dimen/normal_text_size" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_margin="@dimen/margin"
            android:background="@drawable/dialog_corner"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/tv_color_register"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</LinearLayout>
