<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="150dp"
    android:layout_gravity="center"
    android:background="@mipmap/corner_bg">

    <TextView
        android:id="@+id/hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fivefold_margin"
        android:text="@string/register_hint"
        android:textColor="@color/tv_color_login"
        android:textSize="@dimen/normal_text_size" />

    <TextView
        android:id="@+id/tv_sex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ll_btn"
        android:layout_below="@+id/hint"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/big_text_size" />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@mipmap/btn_choose_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin"
            android:text="@string/cancel"
            android:textColor="@color/tv_color_login"
            android:textSize="@dimen/normal_text_size" />

        <TextView
            android:id="@+id/tv_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="@dimen/margin"
            android:text="@string/ok"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/normal_text_size" />

    </LinearLayout>

</RelativeLayout>
