<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_color"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <com.bm.wjsj.View.AutomaticViewPager
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="140dp" />

    <LinearLayout
        android:id="@+id/dot_ll"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@+id/view_pager"
        android:layout_marginRight="@dimen/margin"
        android:layout_marginTop="-20dp"
        android:background="@color/alpha_00"
        android:gravity="right|center_vertical"
        android:orientation="horizontal" />

    <RadioGroup
        android:id="@+id/radiogroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_pager"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rb_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/left_radio_tv"
            android:button="@null"
            android:checked="true"
            android:gravity="center"
            android:text="@string/mycircle"
            android:textColor="@drawable/them_tv_textcolor"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/rb_two"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/right_radio_tv"
            android:button="@null"
            android:gravity="center"
            android:text="@string/hot_post"
            android:textColor="@drawable/them_tv_textcolor"
            android:textSize="15sp" />

    </RadioGroup>

    <TextView
        android:id="@+id/tv_no_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:padding="@dimen/margin"
        android:text="@string/nocircle"
        android:textColor="@color/tv_color_login"
        android:textSize="@dimen/normal_text_size" />

    <ListView
        android:id="@+id/lv_my_circle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cacheColorHint="#00000000"
        android:divider="@null"
        android:dividerHeight="@dimen/margin"
        android:fadingEdge="none"
        android:listSelector="#00000000"
        android:scrollbars="none" />

    <TextView
        android:id="@+id/tv_morecircle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableLeft="@mipmap/matrix"
        android:drawablePadding="@dimen/margin"
        android:gravity="center_vertical"
        android:text="@string/morecircle"
        android:textColor="@color/theme_color"
        android:textSize="@dimen/big_text_size" />

</LinearLayout>
