<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical">

    <include layout="@layout/title_bar"></include>

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/double_margin"
        android:src="@mipmap/pay_success" />

    <TextView
        android:id="@+id/tv_toast"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/threefold_margin"
        android:layout_marginRight="@dimen/threefold_margin"
        android:layout_marginTop="@dimen/double_margin"
        android:gravity="center"
        android:text="@string/pay_success"
        android:textColor="@color/deafaut_text"
        android:textSize="@dimen/normal_text_size" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fourfold_margin"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1"
            android:background="@mipmap/bt_left"
            android:gravity="center"
            android:text="@string/goon_shop"
            android:textColor="@color/white"
            android:textSize="@dimen/normal_text_size"
            android:visibility="visible" />

        <TextView
            android:id="@+id/tv_right2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/fourfold_margin"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@mipmap/bt_right"
            android:gravity="center"
            android:text="@string/backtomy"
            android:textColor="@color/theme_color"
            android:textSize="@dimen/normal_text_size"
            android:visibility="visible" />

    </LinearLayout>

</LinearLayout>
